--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.2",
+    "@types/elliptic": "^6.4.18",
     "@types/jest": "^25.2.1",
     "@types/node": "^20.9.3",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
@@ -33,6 +34,7 @@
     "@swc/core": "^1.3.101",
     "@swc/jest": "^0.2.29",
     "bigint-crypto-utils": "3.3.0",
+    "elliptic": "^6.5.4",
     "ethers": "^6.9.1",
     "tsx": "^4.7.0"
   }
