--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
     "tsx": "^4.7.0",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "zod": "^3.22.4"
   }
 }
