--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "format": "prettier --write .",
     "lint": "eslint './src/**/*.{js,json,ts}'",
     "build": "tsc",
+    "start": "tsc && node ./build/protocol/index.js",
+    "start:dev": "nodemon src/protocol/index.ts",
     "test": "node --import tsx --test src/**/*.test.ts src/**/**/*.test.ts"
   },
   "devDependencies": {
@@ -15,6 +17,7 @@
     "@types/elliptic": "^6.4.18",
     "@types/jest": "^25.2.1",
     "@types/node": "^20.9.3",
+    "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "eslint": "^6.8.0",
@@ -37,14 +40,19 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
+    "dotenv": "^16.3.1",
     "elliptic": "^6.5.4",
     "ethers": "^6.9.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
+    "nodemon": "^3.0.2",
+    "ts-node": "^10.9.2",
     "tsx": "^4.7.0",
+    "uuid": "^9.0.1",
     "winston": "^3.11.0",
+    "ws": "^8.16.0",
     "zod": "^3.22.4"
   }
 }
