--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tsconfig/node20": "^20.1.2",
     "@types/elliptic": "^6.4.18",
     "@types/jest": "^25.2.1",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.9.3",
     "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
@@ -45,8 +46,10 @@
     "ethers": "^6.9.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "flatted": "^3.2.9",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
+    "lodash": "^4.17.21",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.7.0",
