--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "flatted": "^3.2.9",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
+    "ioredis": "^5.3.2",
     "lodash": "^4.17.21",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
