--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@noble/hashes": "^1.3.2",
     "@swc/core": "^1.3.101",
     "@swc/jest": "^0.2.29",
+    "axios": "^1.6.5",
     "bigint-crypto-utils": "3.3.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -50,6 +51,8 @@
     "ioredis": "^5.3.2",
     "lodash": "^4.17.21",
     "nodemon": "^3.0.2",
+    "protobufjs": "^7.2.5",
+    "protoc-gen-js": "^3.21.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.7.0",
     "uuid": "^9.0.1",
