--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.2",
+    "@types/crypto-js": "^4.2.1",
     "@types/elliptic": "^6.4.18",
     "@types/jest": "^25.2.1",
     "@types/lodash": "^4.14.202",
