--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "@swc/core": "^1.3.101",
     "@swc/jest": "^0.2.29",
     "axios": "^1.6.5",
+    "bech32": "^2.0.0",
     "bigint-crypto-utils": "3.3.0",
     "bignumber.js": "^9.1.2",
+    "bs58": "^5.0.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
@@ -58,6 +60,7 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.7.0",
     "uuid": "^9.0.1",
+    "wallet-address-validator": "^0.2.4",
     "winston": "^3.11.0",
     "ws": "^8.16.0",
     "zod": "^3.22.4"
